on mobile portrait, projects panel appeared as cut off abruptly. New fix to allow for touch scrolling for mobile devices.

--- a/css/styles.css
+++ b/css/styles.css
@@ -347,6 +347,12 @@ a:hover {
             min-height: 350px;
             height: 350px;
         }
+
+        .project-info {
+            max-height: 320px;
+            overflow-y: auto;
+            -webkit-overflow-scrolling: touch;
+        }
     }
 
 .project-slider {
